--- a/app/templates/analysis/index.html
+++ b/app/templates/analysis/index.html
@@ -157,16 +157,7 @@
         </div>
         
         <div class="col-md-4 mb-4">
-            <div class="card h-100">
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <i class="bi bi-arrow-down-circle text-danger"></i> Short Analyse
-                    </h5>
-                    <p class="card-text">Analyser potensielle short-muligheter og risikofaktorer.</p>
-                    <a href="{{ url_for('analysis.short_analysis') }}" class="btn btn-danger">Short analyse</a>
-                </div>
-            </div>
-        </div>
+        <!-- Removed duplicate Short Analyse card -->
     </div>
     
     <!-- Market Summary -->
