--- a/app/templates/notifications/index.html
+++ b/app/templates/notifications/index.html
@@ -17,7 +17,7 @@
             <div class="card text-center">
                 <div class="card-body">
                     <h5 class="card-title">Totalt</h5>
-                    <p id="total-count" class="display-6">0</p>
+                    <p id="total-count" class="display-6">{{ summary.total if summary else 0 }}</p>
                 </div>
             </div>
         </div>
@@ -25,7 +25,7 @@
             <div class="card text-center">
                 <div class="card-body">
                     <h5 class="card-title">Uleste</h5>
-                    <p id="unread-count" class="display-6">0</p>
+                    <p id="unread-count" class="display-6">{{ summary.unread if summary else 0 }}</p>
                 </div>
             </div>
         </div>
@@ -33,15 +33,15 @@
             <div class="card text-center">
                 <div class="card-body">
                     <h5 class="card-title">Siste 7 dager</h5>
-                    <p class="display-6">{{ recent_count|default(0) }}</p>
+                    <p class="display-6">{{ summary.recent_activity if summary else 0 }}</p>
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="card text-center">
                 <div class="card-body">
-                    <h5 class="card-title">Siste beløp</h5>
-                    <p class="display-6">{{ last_amount|default(0)|format_currency('NOK') }}</p>
+                    <h5 class="card-title">Høy prioritet</h5>
+                    <p class="display-6">{{ summary.priority_breakdown.high if summary and summary.priority_breakdown else 0 }}</p>
                 </div>
             </div>
         </div>
